--- a/app/global.css
+++ b/app/global.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 ::selection {
   background-color: #47a3f3;
@@ -53,7 +53,7 @@ html {
 
 .prose .anchor:after {
   @apply text-neutral-300 dark:text-neutral-700;
-  content: '#';
+  content: "#";
 }
 
 .prose *:hover > .anchor {
@@ -131,8 +131,8 @@ pre {
 }
 
 /* Remove Safari input shadow on mobile */
-input[type='text'],
-input[type='email'] {
+input[type="text"],
+input[type="email"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -147,4 +147,12 @@ table {
 
 .title {
   text-wrap: balance;
+}
+
+.prose {
+  @apply text-[#fafafa];
+}
+
+.prose :where(h1, h2, h3, h4, h5, h6, p, li, strong, em, a) {
+  @apply text-[#fafafa];
 }
